# minimal-go-bazel-gazelle

./: BUILD.bazel  README.md  WORKSPACE  go.mod  nogo_config.json
cmd/cli/: BUILD.bazel
